# mruls

./: .clang-format  CHANGELOG.md  CMakeLists.txt  Cargo.toml  README.md  TODO.md  config.toml  pyproject.toml
slurp/src/slurp/: __init__.py  app.py
src/: app.rs  config.hpp  config.rs  main.cpp  main.rs  mruls.cpp  mruls.hpp  tui.rs  utils.cpp  utils.hpp
src/mruls/: Config.py  ConfirmCancelDialog.py  OutputViewerModal.py  __init__.py  __main__.py  app.py  config.toml  slurm.py
src/mruls/css/: app.css
src/mruls/widgets/: __init__.py  job_table.py
src/slurp/: __main__.py  app.py  slurm.py
src/slurp/widgets/: __init__.py  job_table.py
