[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mruls"
version = "0.1.0"
description = "A minimal TUI for managing Slurm jobs"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["slurm", "hpc", "tui", "cluster"]
authors = [
    { name = "Dheeraj Vittal Shenoy" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Clustering",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "textual>=0.47.0",
]

[project.scripts]
mruls = "mruls.__main__:main"

[project.urls]
Homepage = "https://github.com/dheeraj/mruls"
Repository = "https://github.com/dheeraj/mruls"

[tool.hatch.build.targets.wheel]
packages = ["src/mruls"]
